package Iterator;

/**
 * @author BianWenKai
 * @DATE 2021/12/11 - 18:02
 **/
public interface Iterator {

    boolean hasNext();

    Object next();

}
